add Timer Voice Lyric controls

--- a/src/pages/music/components/player/Player.less
+++ b/src/pages/music/components/player/Player.less
@@ -25,4 +25,13 @@
       }
     }
   }
+
+  .lyric-container {
+    .lyric-item {
+      &.active {
+        background: gray;
+        color: red;
+      }
+    }
+  }
 }
