--- a/src/pages/music/components/player/Player.less
+++ b/src/pages/music/components/player/Player.less
@@ -1,6 +1,6 @@
 .music-player {
-
-  background: #fff;
+  border-radius: 5px;
+  margin-top: 93px;
 
   .anticon {
     font-size: 20px;
@@ -8,6 +8,9 @@
     cursor: pointer;
   }
   .audio-container {
+    color : #fff;
+    margin-bottom: 40px;
+    border: 1px solid #fff;
     .controls {
       display: flex;
       width: 150px;
@@ -27,10 +30,22 @@
   }
 
   .lyric-container {
+    color: aliceblue;
+    border: 1px solid #fff;
+    max-height: 400px;
+    overflow: hidden;
+    font-size: larger;
+
     .lyric-item {
       &.active {
-        background: gray;
-        color: red;
+        color: #cca645;
+        font-weight: bold;
+        font-size: large;
+      }
+
+      .time-text {
+        display: inline-block;
+        margin-right: 15px;
       }
     }
   }
