--- a/src/pages/music/components/Layout.less
+++ b/src/pages/music/components/Layout.less
@@ -14,6 +14,14 @@
     }
 
     .music-search-view {
+      .ant-tabs-tab {
+        color: #fff;
+      }
+
+      .ant-tabs-nav .ant-tabs-tab-active {
+        color: #108ee9;
+      }
+
       .ant-table,
       .ant-table-thead > tr > th {
         color: #fff;
