--- a/src/pages/music/components/Layout.less
+++ b/src/pages/music/components/Layout.less
@@ -14,6 +14,11 @@
     }
 
     .music-search-view {
+      .add-all-search-songs {
+        display: inline-block;
+        margin-left: 8px;
+      }
+
       .ant-tabs-tab {
         color: #fff;
       }
