--- a/src/pages/music/components/Layout.less
+++ b/src/pages/music/components/Layout.less
@@ -1,5 +1,5 @@
 .root {
-  background: url("../images/banner.jpg") no-repeat center;
+  background: url("../images/banner.jpg") repeat center center;
 
   .music-top-layout {
     min-height: 100%;
