modify musicPlatformMap to CONST

--- a/src/pages/music/components/Layout.less
+++ b/src/pages/music/components/Layout.less
@@ -17,6 +17,11 @@
       .add-all-search-songs {
         display: inline-block;
         margin-left: 8px;
+        cursor: pointer;
+
+        &:Hover {
+          color: #f6f2d4;
+        }
       }
 
       .ant-tabs-tab {
