--- a/src/pages/music/components/player/Player.less
+++ b/src/pages/music/components/player/Player.less
@@ -13,7 +13,6 @@
     border: 1px solid #fff;
     .controls {
       display: flex;
-      width: 150px;
       height: 80px;
       justify-content: space-around;
       align-items: center;
@@ -32,9 +31,10 @@
   .lyric-container {
     color: aliceblue;
     border: 1px solid #fff;
-    max-height: 400px;
+    max-height: 150px;
     overflow: hidden;
     font-size: larger;
+    text-align: center;
 
     .lyric-item {
       &.active {
@@ -46,6 +46,36 @@
       .time-text {
         display: inline-block;
         margin-right: 15px;
+      }
+    }
+  }
+
+  &__playlist-popover {
+    .play-list-item {
+      cursor: pointer;
+
+      &:Hover {
+        text-decoration: underline;
+      }
+    }
+
+    .anticon {
+      margin-right: 8px;
+      cursor: pointer;
+    }
+  }
+
+  .music-timer {
+    .song-info {
+      .img-wrapper{
+        width: 32px;
+        height: 32px;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 5px;
+        }
       }
     }
   }
