--- a/src/pages/music/components/Layout.less
+++ b/src/pages/music/components/Layout.less
@@ -6,7 +6,7 @@
     margin: 0 auto;
     padding-top: 20px;
     max-width: 1200px;
-    background: rgba(251, 246, 246, 0.1);
+    background: none;
 
     .anticon {
       margin-right: 8px;
